####################
# Version 2019.9.7 #
####################

FIXED:

  * BACKPORT: Fixed alignment of first line within `<pre><code>` tags.


####################
# Version 2019.9.6 #
####################

FIXED:

  * BACKPORT: Fixed an issue whereby submitting a multiplechoice question using
    the 'radio' renderer would cause an error if no option was selected
    (courtesy of Kade Phillips)


####################
# Version 2019.9.5 #
####################

FIXED:

  * BACKPORT: Fixed long-standing issue whereby certain students could not log
    in due to cookies being parsed incorrectly by SimpleCookie.


####################
# Version 2019.9.4 #
####################

FIXED:

  * Fixed issue whereby having the logs on a different filesystem from /tmp
    could cause the checker to crash.


####################
# Version 2019.9.3 #
####################

FIXED:

  * Fixed several lingering references to the 'util' module, which has been
    renamed to 'user'.


####################
# Version 2019.9.2 #
####################

FIXED:

  * Fixed an issue preventing question types with multiple boxes (e.g.,
    "multiexpression") from pre-populating those boxes with values from the
    last submission.


####################
# Version 2019.9.1 #
####################

FIXED:

  * Multiple fixes for the 'remote' Python sandbox

CHANGED:

  * The version codename is now displayed when running `catsoop --version`, and
    in the default footer.


####################
# Version 2019.9.0 #
####################

ADDED:

  * Checking functions for `pythoncode` questions can now optionally return a
    tuple (score, message) or a dictionary {'score': score, 'msg': message} to
    display an additional message in response to a test case.

  * Added `cs_local_python_import` function to the context of a page load.
    This function takes a string containing a filename (with extension,
    relative to the current page's directory) and returns a Python module
    object.
