@@ -942,7 +942,10 @@ def handle_check(context):
 
             rerender = args.get("csq_rerender", question.get("always_rerender", False))
             if rerender is True:
-                out["rerender"] = question["render_html"](
+                out["rerender"] = context["csm_language"].source_transform_string(
+                    context, args.get("csq_prompt", "")
+                )
+                out["rerender"] += question["render_html"](
                     newstate["last_submit"], **args
                 )
             elif rerender:
@@ -1168,7 +1171,10 @@ def handle_submit(context):
             newstate["last_submit_time"] = context["cs_timestamp"]
         rerender = args.get("csq_rerender", question.get("always_rerender", False))
         if rerender is True:
-            out["rerender"] = question["render_html"](newstate["last_submit"], **args)
+            out["rerender"] = context["csm_language"].source_transform_string(
+                context, args.get("csq_prompt", "")
+            )
+            out["rerender"] += question["render_html"](newstate["last_submit"], **args)
         elif rerender:
             out["rerender"] = rerender
 
